@@ -17,10 +17,10 @@
 #
 
 ini_set("rom_name",    "Multi-Boot Utilities");
-ini_set("rom_version", "3.0");
+ini_set("rom_version", "3.1");
 ini_set("rom_author",  "Xiao-Long Chen");
 ini_set("rom_device",  "Samsung Galaxy S4 / LG Nexus 5");
-ini_set("rom_date",    "2013-12-31");
+ini_set("rom_date",    "2014-01-05");
 
 # English only for right now
 loadlang("langs/en.lang");
