@@ -1,3 +1,6 @@
+<b><#selectbg_g>Version 3.1</#></b>
+<*><b>Remove kernel in /data/media/0/MultiKernels/ when wiping system</b></*>
+
 <b><#selectbg_g>Version 2.0</#></b>
 <*><b>Add support for multi-slot-*</b></*>
 
